# gw2-viewer

./: .gitignore  CMakeLists.txt  README.md
include/app/: AboutDialog.h  AppState.h  Application.h  SettingsDialog.h
include/app/browser/: BrowserPanel.h
include/app/inspector/: InspectorPanel.h
include/app/viewers/: PreviewPanel.h
include/foundation/: FileReader.h
include/foundation/gw2dattools/: BitArray.h  BitArray.i  HuffmanTree.h  HuffmanTree.i  huffmanTreeUtils.h  inflateDatFileBuffer.h  inflateTextureFileBuffer.h
src/: main.cpp
src/app/: AboutDialog.cpp  Application.cpp  SettingsDialog.cpp
src/app/browser/: BrowserPanel.cpp
src/app/inspector/: InspectorPanel.cpp
src/app/viewers/: PreviewPanel.cpp
src/foundation/gw2dattools/: huffmanTreeUtils.cpp  inflateDatFileBuffer.cpp  inflateTextureFileBuffer.cpp
